# TECO_LLM_cli

./: .gitignore  INSTALL.md  README.md  pyproject.toml  suggested_strategies.md
interview-evaluation/: README.md  pyproject.toml
interview-evaluation/docs/adr/: 001-interview-quality-evaluation.md
interview-evaluation/interview_eval/: chat_simulator.py  comparison.py  config.py  evaluation.py  interactive.py  llm.py  paths.py  requirements_extraction.py  services.py
interview-evaluation/interview_eval/prompts/: evaluator.md  requirements.md  stakeholder.md
interview-evaluation/interview_eval/prompts/interviewers/: interviewer_latest.md
interview-evaluation/interview_eval/web/: app.py  dependencies.py  jobs.py
interview-evaluation/interview_eval/web/routers/: api.py  comparisons.py  dashboard.py  evaluations.py  pipeline.py  scenarios.py  steps.py
interview-evaluation/interview_eval/web/templates/: base.html  dashboard.html
interview-evaluation/scenarios/: ecommerce.json  logistica.json
test-case-evaluation/: INSTALL.md  README.md  generate_added_info_analysis.py  generate_eval_report.py  pyproject.toml  suggested_strategies.md
test-case-evaluation/docs/adr/: ADR-004-side-effects-personas-for-test.md  ADR-005-personas-context-injection.md
test-case-evaluation/output_test/: added_info_analysis.html  evaluation_report_aggregato.html
test-case-evaluation/output_test/percorso_diretto/test_cases/: REQ-D-001_test_cases.json  REQ-D-003_test_cases.json  REQ-D-004_test_cases.json  (+43 more)
test-case-evaluation/teco_cli/: __main__.py  files.py  interactive.py  paths.py  pipeline.py  pipeline_cli.py  report_html.py
(+318 files in other folders)
