[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teco-cli"
version = "0.1.0"
description = "CLI tool per inviare file di testo ad Azure OpenAI"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
teco-cli = "teco_cli.__main__:main"
teco-pipeline = "teco_cli.pipeline_cli:main"
teco-interactive = "teco_cli.interactive:main"

[tool.setuptools.packages.find]
include = ["teco_cli*"]
