[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-evaluator"
version = "0.2.0"
description = "CLI per generazione e valutazione test cases da requisiti via LLM"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
test-evaluator = "teco_cli.interactive:main"

[tool.setuptools.packages.find]
include = ["teco_cli*"]
